<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/start"
    android:gravity="center"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".firstOpen.StartFragment">

    <TextView
        android:id="@+id/start_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_welcome"
        android:textStyle="bold"
        android:textSize="30sp"
        android:gravity="center_horizontal" />
    <TextView
        android:id="@+id/start_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_welcome2"
        android:gravity="center_horizontal"
        android:layout_marginVertical="25dp"
        android:layout_marginHorizontal="20dp"
         />
    <Button
        android:id="@+id/start_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_btn_in"/>

</LinearLayout>